# deep-learning

./: pyproject.toml  shell.nix
pytorch/: model.pth  quickstart.py
src/deep_learning/: main.py
