[tool.poetry]
name = "deep_learning"
version = "0.1.0"
description = ""
authors = ["Chandler Scott <chandler.scott.dev@gmail.com>"]
readme = "README.md"
packages = [{include = "src"}]

[tool.poetry.dependencies]
python = "^3.11"
numpy = "^2.0.0"
torch = "^2.3.1"
torchvision = "^0.18.1"


[build-system]
requires = ["poetry-core"]
build-backend = "poetry.core.masonry.api"
